# black-shores-server

./: .gitignore  CMakeLists.txt  README.md  ssl-certificates_writeup.md  vcpkg.json
config/: config.txt
src/: CMakeLists.txt  GetIPv4IPv6.hpp  IPvalidator.hpp  IpCollector.cpp  IpCollector.h  IpCollector.hpp  create_cert.cpp  create_cert.hpp  dotenv.hpp  main.cpp  pathFinder.hpp
src/CLI/: CLI.ixx  CMakeLists.txt  Data_Manager.ixx  TUI.ixx
src/UI/: components.hpp  nav.hpp  style.hpp
src/WebSockets/: CMakeLists.txt  ChatWS.cpp  ChatWS.h
src/controllers/: CMakeLists.txt  CritExit.cpp  CritExit.hpp  PathManager.hpp  RootCtrl.cpp  RootCtrl.hpp  home.cpp  home.hpp  stream_test.cpp  stream_test.hpp
webapp/root/: index.html
webapp/root/assets/: index-BnEqsw_M.js
